@@ -4,6 +4,7 @@ use strict;
 use warnings;
 
 use FindBin;
+use File::stat;
 use Test::More;
 use File::Spec;
 use CSS::Minifier::XS 'minify';
@@ -11,7 +12,8 @@ use CSS::Minifier::XS 'minify';
 use lib "$FindBin::Bin/../lib", "$FindBin::Bin/lib";
 use Catalyst::Test 'TestApp';
 
-my $served = get('/test');
+my $res = request('/test');
+my $served = $res->content;
 
 ok $served, q{served data isn't blank};
 my $path = File::Spec->catfile($FindBin::Bin, qw{lib TestApp root css foo.css});
@@ -23,6 +25,7 @@ while (<$file>) {
 }
 
 is minify($str), $served, 'server actually minifed the css';
+is $res->headers->last_modified, stat($path)->mtime, 'right modtime header';
 
 done_testing;
 
